# starlette-http-exceptions

./: .gitignore  Makefile  README.md  pyproject.toml
src/starlette_http_exceptions/: __init__.py  http_exceptions.py  main.py  ws_exceptions.py
